Added library for nodes/connections, began new connection function.

--- a/BlazorApp1/BlazorApp1.csproj
+++ b/BlazorApp1/BlazorApp1.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="IronXL.Excel" Version="2023.1.14" />
+    <PackageReference Include="Syncfusion.Blazor.Diagram" Version="20.4.0.51" />
   </ItemGroup>
 
 </Project>
